# gtiod

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: custom_imports.py
configs/texbig/: texbig_detectoRS_train_em_wbf_val_em_wbf.py  texbig_detectoRS_train_em_wbf_val_laem_averaging.py  texbig_detectoRS_train_em_wbf_val_laem_intersection.py  texbig_detectoRS_train_em_wbf_val_laem_union.py  texbig_detectoRS_train_em_wbf_val_mjv_averaging.py  texbig_detectoRS_train_em_wbf_val_mjv_intersection.py  texbig_detectoRS_train_em_wbf_val_mjv_union.py  texbig_detectoRS_train_em_wbf_val_wbf.py  texbig_detectoRS_train_laem_averaging_val_em_wbf.py  texbig_detectoRS_train_laem_averaging_val_laem_averaging.py  texbig_detectoRS_train_laem_averaging_val_laem_intersection.py  texbig_detectoRS_train_laem_averaging_val_laem_union.py  texbig_detectoRS_train_laem_averaging_val_mjv_averaging.py  texbig_detectoRS_train_laem_averaging_val_mjv_intersection.py  texbig_detectoRS_train_laem_averaging_val_mjv_union.py  texbig_detectoRS_train_laem_averaging_val_wbf.py  texbig_detectoRS_train_laem_intersection_val_em_wbf.py  texbig_detectoRS_train_laem_intersection_val_laem_averaging.py  texbig_detectoRS_train_laem_intersection_val_laem_intersection.py  texbig_detectoRS_train_laem_intersection_val_laem_union.py  texbig_detectoRS_train_laem_intersection_val_mjv_averaging.py  texbig_detectoRS_train_laem_intersection_val_mjv_intersection.py  texbig_detectoRS_train_laem_intersection_val_mjv_union.py  (+49 more)
gtiod/: __init__.py
gtiod/datasets/: __init__.py  (+7 more)
tools/: inference.py  test.py  train.py
(+337 files in other folders)
